# ctfwatch

./: Dockerfile  README.md  entrypoint.sh  run.sh
ctfwatch/: Cargo.toml  out  rustfmt.toml
ctfwatch/src/: lib.rs  main.rs
