[package]
name = "ctf_watch"
version = "0.1.0"
authors = ["Luca Di Bartolomeo <ctf@cyanpencil.xyz>"]
edition = "2018"

[[bin]]
name = "ctf_watch"
doc = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10.4", features = [ "blocking" , "json"] }
serde = { version = "1.0", features = [ "derive" ] }

[profile.release]
lto = true
panic = "abort"
