[package]
name = "ctf_watch"
version = "0.1.0"
authors = ["Luca Di Bartolomeo <ctf@cyanpencil.xyz>"]
edition = "2018"

[[bin]]
name = "ctf_watch"
doc = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = [ "blocking" , "json"] }
serde = { version = "1.0", features = [ "derive" ] }
unicode-segmentation = { version = "1.7.1" }
strip-ansi-escapes = "0.1"

[profile.release]
lto = true
panic = "abort"
